--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.8",
+    "pillow>=11.1.0",
     "pydantic-settings>=2.8.0",
 ]
 
@@ -14,6 +15,11 @@ dev = [
     "pytest>=8.3.4",
     "ruff>=0.9.7",
 ]
+
+[tool.tomlscript]
+start = "uv run uvicorn src.app.main:app --host 0.0.0.0 --port 8000 --reload"
+lint = "uv run ruff check"
+format = "uv run ruff format"
 
 [tool.ruff]
 # Set the maximum line length to 79.
