--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,18 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-            python-version-file: ".python-version"
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
-
-      - name: Install the project
-        run: uv sync --all-extras --dev
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup
 
       - name: Run tests
-        run: uv run pytest
+        run: uv run pytest -v --durations=0 --cov --cov-report=xml
+
+      # - name: Upload Coverage to Codecov
+      #   uses: codecov/codecov-action@v4
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
