--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -1,7 +1,7 @@
 name: Python Code Quality
 on: [ push, pull_request ]
 jobs:
-  ruff:
+  quality-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
