--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pillow>=11.1.0",
     "pre-commit>=4.1.0",
     "pydantic-settings>=2.8.0",
+    "pyright[nodejs]>=1.1.394",
     "uvicorn>=0.34.0",
 ]
 
