--- a/deploy/Dockerfile.dev
+++ b/deploy/Dockerfile.dev
@@ -1,31 +1,39 @@
-FROM python:3.13-slim AS builder
+FROM python:3.12-slim
 
-ENV UV_COMPILE_BYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
+ENV USER=uv-user \
     PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=off \
-    PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=100
+    PYTHONUNBUFFERED=1 \
+    UV_PROJECT_ENVIRONMENT=/usr/local \
+    UV_PYTHON_DOWNLOADS=never
 
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && useradd -m -s /bin/bash $USER
 
-WORKDIR /app
+COPY --from=ghcr.io/astral-sh/uv:0.5.5 /uv /uvx /bin/
 
-RUN --mount=type=cache,target=/root/.cache/uv \
+ENV APP_DIR=/home/$USER/src
+WORKDIR $APP_DIR
+
+RUN --mount=type=cache,target=/home/$USER/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project --no-editable
+    uv sync --frozen --no-install-project --no-dev
 
-ADD . /app
+COPY . $APP_DIR
 
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-editable
+RUN --mount=type=cache,target=/home/$USER/.cache/uv \
+    uv sync --frozen --no-dev
 
-FROM python:3.13-slim
-COPY --from=builder --chown=app:app /app/.venv /app/.venv
+ENV PYTHONPATH=$APP_DIR
 
 COPY deploy/entrypoint.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh && ls -lah /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+RUN chmod +x /entrypoint.sh
 
-CMD ["/app/.venv/bin/uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
+RUN chown -R "$USER":"$USER" $APP_DIR
+USER $USER
+
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
