--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,15 @@ name = "waste-recognition-api"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.115.8",
+    "numpy>=2.2.4",
     "pillow>=11.1.0",
     "pre-commit>=4.1.0",
     "pydantic-settings>=2.8.0",
     "pyright[nodejs]>=1.1.394",
+    "requests>=2.32.3",
     "uvicorn>=0.34.0",
 ]
 
